--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3292,7 +3292,7 @@
 			display: block;
 			margin: 0 auto;
 			max-width: 60%;
-			padding: 4em;
+			padding: 5em;
 			position: relative;
 			text-align: center;
 			vertical-align: top;
